# djestful-framework

./: .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: unit-test.yaml
djestful/: __init__.py  apps.py  constants.py  decorators.py  func_attributes.py  routers.py  types.py  urls.py  utils.py  views.py
djestful/openapi/: constants.py  docs.py  models.py
src/djestful/: __init__.py  admin.py  apps.py  config.py  constants.py  decorators.py  func_attributes.py  operation.py  routers.py  urls.py  utils.py  views.py
src/djestful/openapi/: docs.py  models.py  schemas.py  views.py
src/djestful/params/: functions.py  models.py
src/djestful/templates/apidocs/: swagger.html
src/tests/: manage.py
src/tests/app/: asgi.py  schemas.py  settings.py  urls.py
src/tests/app/tests/: test_simple_api_view_class.py  test_simple_api_view_class_async.py
tests/app/: urls.py  wsgi.py
tests/app/tests/: test_simple_api_view_class.py  test_simple_function_view.py
tests/examples/: example.py
tests/test_project/: manage.py
tests/test_project/test_app/: urls.py  views.py
tests/test_project/test_project/: settings.py  urls.py
