[tool.poetry]
name = "djestful-framework"
version = "0.0.0"
description = "Djestful Framework is a Python framework for building RESTful APIs with Standard OpenAPI 3.x+"
authors = ["Izcar J. Muñoz Torrez <imunoz@open-byte.dev>"]

readme = "README.md"

packages = [
    { include = "djestful" },
    { include = "djestful/**/*.py"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pydantic = ">=2.9, <3"
django = ">= 4.2, < 6"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.9,<2"
ruff = ">=0.5 , <0.8"
pre-commit = ">=3.7.0, <4.0.0"
django-stubs = ">=5.0.0, <6.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.3, <9"
pytest-django = ">=4.9.0, <5.0.0"

[tool.pytest]
DJANGO_SETTINGS_MODULE = "tests.app.settings"
python_files = ["tests.py", "test_*.py"]

[tool.mypy]
python_version = "3.11"
exclude=[".venv", "tests"]
strict=true

plugins = ["pydantic.mypy"]
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.ruff]
src =["djestful"]
exclude = [
    ".venv", 
]
line-length = 100
fixable = ["F401", "ALL"]
unfixable = []
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"