[project]
name = "djestful"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Izcar J. Muñoz Torrez", email = "izcarmt95@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "django>=4,<6",
    "pydantic>=2.9,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.1.3",
    "mypy>=1.9,<2",
    "pre-commit>=3.8,<4",
    "ruff>=0.9,<1",
]
testing = [
    "pytest-django>=4.9.0",
]

[tool.pytest]
DJANGO_SETTINGS_MODULE = "tests.app.settings"
python_files = ["tests.py", "test_*.py"]

[tool.mypy]
python_version = "3.11"
exclude=[".venv", "tests"]
strict=true

plugins = ["pydantic.mypy"]
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.ruff]
src =["djestful"]
exclude = [
    ".venv",
]
line-length = 100
fixable = ["F401", "ALL"]
unfixable = []
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
